--- a/templates/rsa_screen.html
+++ b/templates/rsa_screen.html
@@ -237,5 +237,11 @@
     
     </div>
   </main>
+
+  <footer class="text-center mt-auto py-3 text-white bg-dark fixed-bottom">
+    <div class="text-center p-0.5">
+      INT3230E - Cryptography: Nguyễn Hữu Thế & Hoàng Kim Chi
+    </div>
+  </footer>
 </body>
 </html>
