--- a/templates/elgammal.html
+++ b/templates/elgammal.html
@@ -22,31 +22,31 @@
                   <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                  <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                      <!-- link to rsa -->
-                      <a class="nav-link" href="rsa_screen.html">RSA</a>
-                    </li>
-                    <li class="nav-item">
-                      <!-- link to elgammal -->
-                      <a class="nav-link" href="elgammal.html">ElGammal</a>
-                    </li>
-                    <li class="nav-item">
-                      <!-- link to eliptic -->
-                      <a class="nav-link" href="elliptic.html">Elliptic</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                      <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="true">
-                        Fundamentals
-                      </a>
-                      <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="euclid.html">Euclid algorithm</a></li>
-                        <li><a class="dropdown-item" href="primality.html">Primality test</a></li>
-                        <li><hr class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" href="other.html">Something else here</a></li>
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                          <!-- link to rsa -->
+                          <a class="nav-link" href="/">RSA</a>
+                        </li>
+                        <li class="nav-item">
+                          <!-- link to elgammal -->
+                          <a class="nav-link" href="/elgammal">ElGammal</a>
+                        </li>
+                        <li class="nav-item">
+                          <!-- link to eliptic -->
+                          <a class="nav-link" href="/elliptic">Elliptic</a>
+                        </li>
+                       encrypted_message_int, message_intdropdown">
+                          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="true">
+                            Fundamentals
+                          </a>
+                          <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="/euclid">Euclid algorithm</a></li>
+                            <li><a class="dropdown-item" href="/primality">Primality test</a></li>
+                            <li><hr class="dropdown-divider"></li>
+                            <li><a class="dropdown-item" href="other.html">Something else here</a></li>
+                          </ul>
+                        </li>
                       </ul>
-                    </li>
-                  </ul>
                 </div>
               </div>
             </nav>
