main branch - ui: update navigation bar

--- a/templates/elliptic.html
+++ b/templates/elliptic.html
@@ -12,43 +12,64 @@
 
         <header>
             <nav class="navbar fixed-top navbar-expand-lg bg-dark navbar-dark">
-              <div class="container-fluid">
-                <!-- link to homescreen -->
-                <a class="navbar-brand" href="#">
-                  <img src="" alt="">
-                  INT3230E
-                </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                  <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                  <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                      <!-- link to rsa -->
-                      <a class="nav-link" href="rsa_screen.html">RSA</a>
-                    </li>
-                    <li class="nav-item">
-                      <!-- link to elgammal -->
-                      <a class="nav-link" href="elgammal.html">ElGammal</a>
-                    </li>
-                    <li class="nav-item">
-                      <!-- link to eliptic -->
-                      <a class="nav-link" href="elliptic.html">Elliptic</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                      <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="true">
-                        Fundamentals
-                      </a>
-                      <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="euclid.html">Euclid algorithm</a></li>
-                        <li><a class="dropdown-item" href="primality.html">Primality test</a></li>
-                        <li><hr class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" href="other.html">Something else here</a></li>
-                      </ul>
-                    </li>
-                  </ul>
+                <div class="container-fluid">
+                  <!-- link to homescreen -->
+                  <a class="navbar-brand" href="#">
+                    <img src="" alt="">
+                    INT3230E
+                  </a>
+                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                  </button>
+                  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="true">
+                              RSA
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="rsa_screen.html">RSA</a></li>
+                                <li><hr class="dropdown-divider"></li>
+                              <li><a class="dropdown-item" href="rsa_signature.html">RSA Digital Signature</a></li>
+                            </ul>
+                        </li>
+
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="true">
+                              ElGammal
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="elgammal.html">Elgammal</a></li>
+                                <li><hr class="dropdown-divider"></li>
+                              <li><a class="dropdown-item" href="elgammal_signature.html">Elgammal Digital Signature</a></li>
+                            </ul>
+                        </li>
+
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="true">
+                              Elliptic
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="elliptic.html">ECC</a></li>
+                                <li><hr class="dropdown-divider"></li>
+                              <li><a class="dropdown-item" href="elliptic_signature.html">ECC Digital Signature</a></li>
+                            </ul>
+                        </li>
+
+                      <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="true">
+                          Fundamentals
+                        </a>
+                        <ul class="dropdown-menu">
+                          <li><a class="dropdown-item" href="euclid.html">Euclid algorithm</a></li>
+                          <li><a class="dropdown-item" href="primality.html">Primality test</a></li>
+                          <li><hr class="dropdown-divider"></li>
+                          <li><a class="dropdown-item" href="other.html">Something else here</a></li>
+                        </ul>
+                      </li>
+                    </ul>
+                  </div>
                 </div>
-              </div>
             </nav>
         </header>
 
