--- a/templates/euclid.html
+++ b/templates/euclid.html
@@ -23,18 +23,39 @@
                   </button>
                   <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                      <li class="nav-item">
-                        <!-- link to rsa -->
-                        <a class="nav-link" href="rsa_screen.html">RSA</a>
-                      </li>
-                      <li class="nav-item">
-                        <!-- link to elgammal -->
-                        <a class="nav-link" href="elgammal.html">ElGammal</a>
-                      </li>
-                      <li class="nav-item">
-                        <!-- link to eliptic -->
-                        <a class="nav-link" href="elliptic.html">Elliptic</a>
-                      </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="true">
+                              RSA
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="rsa_screen.html">RSA</a></li>
+                                <li><hr class="dropdown-divider"></li>
+                              <li><a class="dropdown-item" href="rsa_signature.html">RSA Digital Signature</a></li>
+                            </ul>
+                        </li>
+
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="true">
+                              ElGammal
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="elgammal.html">Elgammal</a></li>
+                                <li><hr class="dropdown-divider"></li>
+                              <li><a class="dropdown-item" href="elgammal_signature.html">Elgammal Digital Signature</a></li>
+                            </ul>
+                        </li>
+
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="true">
+                              Elliptic
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="elliptic.html">ECC</a></li>
+                                <li><hr class="dropdown-divider"></li>
+                              <li><a class="dropdown-item" href="elliptic_signature.html">ECC Digital Signature</a></li>
+                            </ul>
+                        </li>
+
                       <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="true">
                           Fundamentals
@@ -49,7 +70,7 @@
                     </ul>
                   </div>
                 </div>
-              </nav>
+            </nav>
         </header>
 
         <main class="pt-5 mb-5">
